# GPW-Quant-System

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  gpw_selected.csv  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: README.md  app.py  daily_trader.py  dashboard.py  engine.py  intraday_trader.py  sync.py  web.py
app/templates/: base.html  dashboard.html
automation/: README.md  daily_config.env  daily_report.json  intraday_config.env  intraday_report.json  keep_alive.py  run_daily.sh  run_intraday.sh  setup_auto.py
backtest/: README.md  engine.py  lstm_model.ipynb  run_backtest.py  test_engine.py  test_simple.py
data/: README.md
data/backtests/: pkn.daily.csv  (+5 more)
docs/: desing_proposal.md  hybrid_lstm_gpw.md
journals/: orders.jsonl
models/: acp_backtest_lstm.csv  acp_lstm.pth  acp_lstm_model.pth  acp_scaler.json  bhw_backtest_lstm.csv  bhw_lstm.pth  bhw_lstm_model.pth  bhw_scaler.json  brs_backtest_lstm.csv  brs_lstm.pth  brs_lstm_model.pth  brs_scaler.json  gtc_backtest_lstm.csv  gtc_lstm.pth  gtc_lstm_model.pth  gtc_scaler.json  jsw_backtest_lstm.csv  jsw_lstm.pth  jsw_lstm_model.pth  jsw_scaler.json  ker_backtest_lstm.csv  ker_lstm.pth  ker_lstm_model.pth  ker_scaler.json  kgh_backtest_lstm.csv  kgh_lstm.pth  kgh_lstm_model.pth  kgh_scaler.json  lwb_backtest_lstm.csv  lwb_lstm.pth  lwb_lstm_model.pth  lwb_scaler.json  models_summary_lstm.csv  peo_backtest_lstm.csv  peo_lstm.pth  peo_lstm_model.pth  peo_scaler.json  pge_backtest_lstm.csv  pge_lstm.pth  pge_lstm_model.pth  (+17 more)
strategies/: NNmodels.py  README.md  base.py  build_hybrid_lstm_signals.py  config_strategies.py  hybrid_features.py  hybrid_lstm_strategy.py  indicators.py  lstm_strategy.py  lstm_utils.py  mean_reversion.py  momentum.py  preprocessing.ipynb  rsi.py  run_strategies.py  train_hybrid_lstm.py  train_lstm.py
tests/: README.md  test_generated_signals.py  test_mean_reversion.py  test_momentum.py  test_rsi.py  test_run_backtest.py  test_strategies.py
(+114 files in other folders)
