[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpw-quant-system"
version = "0.1.0"
description = "Algorithmic trading system for GPW (Warsaw Stock Exchange)"
readme = "README.md"
authors = [
    { name = "Antek Grajek", email = "antekgrajek@gmail.com" },
    { name = "vpow10" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.13.2",
    "Flask>=3.0.0",
    "httpx>=0.27.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "polars>=1.35.2",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.3",
    "rich>=14.2.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pandas-stubs>=2.0.0",
    "pre-commit>=3.4.0",
    "pytest>=7.3.1",
    "ruff>=0.12.1",
    "types-Flask>=1.1.6",
]

[project.urls]
Homepage = "https://github.com/vpow10/GPW-Quant-System"

[tool.setuptools.packages.find]
include = ["app*", "strategies*", "backtest*", "data*", "automation*"]

# --- Tool Configurations ---

[tool.black]
line-length = 98
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 98
known_first_party = ["app", "strategies", "backtest", "data"]

[tool.ruff]
line-length = 98
exclude = ["**/*.ipynb", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "T"]
ignore = [
    "E501",  # line too long (handled by black)
    "T201",  # print found (used in scripts)
    "C901",  # complexity (handled separately)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "backtest",
    "tests",
]
